--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-	<html>
+<html>
 	<head>
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
@@ -7,65 +7,110 @@
 		<title>Chalé Hotel - Home</title>
 	</head>
 	<body>
-		<div id="conteudo"><!-- Inicio do Conteudo -->
-			<div id="cabecalho"><!-- Inicio do Cabecalho -->
-				<div id="logo">
-					<a href="">
-						<img src="imagem/logo.png" title="chalé hotel">
-					</a>						
+		<div id="cabecalho"><!-- Inicio do Cabecalho -->
+			<div id="logo">
+				<a href="">
+					<img src="imagem/logo.png" title="chalé hotel">
+				</a>
+			</div>
+
+			<div id="menu"><!-- Inicio do menu -->
+
+				<div id="conteudo-titulo"><!-- Inicio do Endereco + Botao -->
+					<div id="conteudo-endereco">
+						<h5>Rio de Janeiro - São Paulo - Belo Horizonte</h5>
+					</div>
+					<div id="conteudo-botao">
+						<button>RESERVAR</button>
+					</div>
+					<div id="clear"></div>
+				</div><!-- Fim do Endereco + Botao -->
+
+				<div id="conteudo-container"><!-- Inicio do menu do cabecalho -->
+
+					<div id="conteudo-nav">
+						<ul>
+							<li><a href="">HOME</a></li>
+							<li><a href="">HISTÓRIA</a></li>
+							<li><a href="">IMPRENSA</a></li>
+							<li><a href="">GASTRONOMIA</a></li>
+							<li><a href="">CONTATO</a></li>
+						</ul>
+					</div>
+
+					<div id="conteudo-logo">
+						<img src="imagem/depoimento.png">
+					</div>
+
+					<div id="clear"></div>
 				</div>
 
-				<div id="menu"><!-- Inicio do menu -->
+			</div><!-- Fim do Menu -->
+		</div> <!--Fim do Cabecalho -->	
 
-					<div id="conteudo-titulo"><!-- Inicio do Endereco + Botao -->
-						<div id="conteudo-endereco">
-							<h5>Rio de Janeiro - São Paulo - Belo Horizonte</h5>
-						</div>
-						<div id="conteudo-botao">
-							<button>RESERVAR</button>
-						</div>
-						<div id="clear"></div>		
-					</div><!-- Fim do Endereco + Botao -->
-
-					<div id="conteudo-container"><!-- Inicio do menu do cabecalho -->
-
-						<div id="conteudo-nav">
-							<ul>
-								<li><a href="">HOME</a></li>
-								<li><a href="">HISTÓRIA</a></li>
-								<li><a href="">IMPRENSA</a></li>
-								<li><a href="">GASTRONOMIA</a></li>
-								<li><a href="">CONTATO</a></li>			
-							</ul>
-						</div>
-
-						<div id="conteudo-logo">
-							<img src="imagem/depoimento.png">
-						</div>
-
-						<div id="clear"></div>		
-					</div>		
-
-				</div><!-- Fim do Menu -->
-
-				<div id="clear"></div>
-			</div><!-- Fim do Cabecalho -->
-
-			<div id="informacao"><!-- Inicio da Informacao -->		
+		<div id="conteudo"><!--Inicio do Conteudo -->
+			<div id="informacao"><!-- Inicio da Informacao -->
 				<h4>Lorem Ipsum is simply dummy text of the printing and typesetting</h4>
 				<p>
-					Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.
+					Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the
+					industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and
+					scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap
+					into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the
+					release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing
+					software like Aldus PageMaker including versions of Lorem Ipsum.
 				</p>
 				<p>
-					Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type.
+					Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the
+					industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type.
 				</p>
 				<p>
-					Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. 
-				</p>									
+					Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the
+					industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and
+					scrambled it to make a type specimen book.
+				</p>
 			</div><!-- Fim do Infomacao -->
-			
-			<div id="area-selecao"><!-- Inicio da Selecao -->		
-				
+
+			<div id="area-selecao"><!-- Inicio da Selecao -->
+				<div class="coluna-vertical">
+					<img src="imagem/apartamento.jpg" title="apartamento">
+					<h3>Apartamento</h3>
+					<p>
+						Lorem Ipsum is simply dummy text of the printing and typesetting
+					</p>
+					<a href="">Ver Mais Detalhes</a>
+					<div id="clear"></div>
+				</div>
+
+				<div class="coluna-vertical">
+					<img src="imagem/piscina.jpg" title="piscina">
+					<h3>Piscina</h3>
+					<p>
+						Lorem Ipsum is simply dummy text of the printing and typesetting
+					</p>
+					<a href="">Ver Mais Detalhes</a>
+					<div id="clear"></div>
+				</div>
+
+				<div class="coluna-vertical">
+					<img src="imagem/restaurante.jpg" title="restaurante">
+					<h3>Restaurante</h3>
+					<p>
+						Lorem Ipsum is simply dummy text of the printing and typesetting
+					</p>
+					<a href="">Ver Mais Detalhes</a>
+					<div id="clear"></div>
+				</div>
+
+				<div class="coluna-vertical">
+					<img src="imagem/quarto.jpg" title="quarto">
+					<h3>Quartos</h3>
+					<p>
+						Lorem Ipsum is simply dummy text of the printing and typesetting
+					</p>
+					<a href="">Ver Mais Detalhes</a>
+					<div id="clear"></div>
+				</div>
+
 			</div><!-- Fim do Selecao -->
 			<div id="rodape">
 				<h4>Todos os Direitos Reservados 2023 - Ighor Drummond</h4>
