--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
 		<title>Chalé Hotel - Home</title>
 	</head>
 	<body>
+		<auto src="https://sounds-mp3.com/mp3/0013251.mp3" autoplay>
+			Seu Navegador não suporta Este Audio
+		</auto>
 		<div id="introducao">
 			<img src="imagem/casa.png" width="340">
 			<p>Bem-vindo ao Chalé-Hotel!</p>
