Site Chalé Hotel

--- a/index.html
+++ b/index.html
@@ -7,9 +7,6 @@
 		<title>Chalé Hotel - Home</title>
 	</head>
 	<body>
-		<auto src="https://sounds-mp3.com/mp3/0013251.mp3" autoplay>
-			Seu Navegador não suporta Este Audio
-		</auto>
 		<div id="introducao">
 			<img src="imagem/casa.png" width="340">
 			<p>Bem-vindo ao Chalé-Hotel!</p>
@@ -124,6 +121,11 @@
 			</div>
 		</div><!-- Fim do Conteudo -->
 
+	    <audio controls autoplay loop>
+	        <source src="audio/0013251.mp3" type="audio/mpeg">
+	        Seu navegador não suporta a tag de áudio.
+	    </audio>
+	    
 		<!-- Comandos Javascript -->
 		<script type="text/javascript">
 			//Declaração de Variavel
