Site Chalé Hotel

--- a/index.html
+++ b/index.html
@@ -118,20 +118,22 @@
 			</div><!-- Fim do Selecao -->
 			<div id="rodape">
 				<h4>Todos os Direitos Reservados 2023 - Ighor Drummond</h4>
-			</div>
+			</div>		
+			<audio controls autoplay>
+		        <source src="audio/0013251.mp3" type="audio/mpeg">
+		        Seu navegador não suporta a tag de áudio.
+		    </audio>				
 		</div><!-- Fim do Conteudo -->
 
-	    <audio controls autoplay loop>
-	        <source src="audio/0013251.mp3" type="audio/mpeg">
-	        Seu navegador não suporta a tag de áudio.
-	    </audio>
-	    
+
 		<!-- Comandos Javascript -->
 		<script type="text/javascript">
 			//Declaração de Variavel
 			var audio = new Audio() // Cria Audio
 			var div = document.querySelector('#introducao');//Recebe conteudo da introdução	
 			var posdiv = document.querySelector('#cabecalho');//Recebe conteudo do cabeçalho
+
+			document.querySelector('#cabecalho').click;
 
 			//Função de Desligar Div
 		    setInterval(saida, 4000)
@@ -151,6 +153,6 @@
 				audio.src = 'https://sounds-mp3.com/mp3/0000171.mp3'
 				audio.play()
 			}
-		</script>
+		</script>	
 	</body>
 </html>
